--- a/Project2/index.html
+++ b/Project2/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="full-container">
+        <!-- Navigation bar -->
         <nav>
             <img src="./Assets/website-logo.png" alt="logo" class="logo">
             <div>
@@ -29,6 +30,7 @@
             </div>
         </nav>
 
+        <!-- Main/left part -->
         <div class="left">
             <h1 class="title">Chase Your <br>Dream with us</h1>
             <p class="moto">The harder you work for something, the<br> greater you'll feel when you achieve it.</p>
@@ -47,6 +49,7 @@
             </div>
         </div>
 
+        <!-- Right section -->
         <section class="right">
             <div class="loan">
                 <button class="loan-button"><img src="./Assets/car.png" alt="Car-logo"><span>Car Loan</span></button>
